--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -24,10 +24,16 @@ a:hover {
  * Base structure
  */
 
+html { 
+  background: url(../images/image.jpeg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 html,
 body {
   height: 100%;
-  background-color: #333;
 }
 body {
   color: #fff;
