--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -25,7 +25,7 @@ a:hover {
  */
 
 html { 
-  background: url(../images/image.jpeg) no-repeat center center fixed; 
+  background: url(http://mangobarbulon.com/assets/images/image.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
